test/data/codegen/valid/one_col_one_param_one/queries.cypher
// name: PersonName :one
MATCH (p:Person) WHERE p.id = $id RETURN p.name
