test/data/codegen/invalid/duplicate_query_name/first.cypher
// name: FindPerson :one
MATCH (p:Person) WHERE p.id = $id RETURN p
